Login Page Controler created

--- a/FrisbyBall/FrisbyBall.csproj
+++ b/FrisbyBall/FrisbyBall.csproj
@@ -32,6 +32,7 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Controlers\LoginPageControler.cs" />
     <Compile Include="Managers\MatchManager.cs" />
     <Compile Include="Managers\UserManager.cs" />
     <Compile Include="Models\Images.cs" />
