--- a/FrisbyBall/FrisbyBall.csproj
+++ b/FrisbyBall/FrisbyBall.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Views\TopPlayersPage.xaml.cs">
       <DependentUpon>TopPlayersPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controlers\RegistrationPageController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
